Implemented the phone call activity, in the middle of SMS functionality right now! One note - I created a new Phone activity and filled most of it out, but then I realized that we'll only be using one phone number, so I just made a phone intent that activates when that menu option is chosen. I kept the activity in case I want to implement multiple numbers later, but for right now it's just chilling, unused.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="Plan_Trip">Plan Trip</string>
     <string name="call_SW">Call SafeWalk</string>
     <string name="Text_A_Friend">Text a Friend</string>
+    <string name="failure_permission">Phone permissions not granted</string>
+    <string name="permission_not_granted">SMS permission not granted</string>
+    <string name="sms_hint">Phone Number</string>
+    <string name="sms_message_hint">Enter your message here...</string>
 </resources>
