Changed the colors/layout, added snackbar/menu item to display route info, added alert dialog for phone call, changed icon for route builder and app icon, updated app name and display name. We probably did other stuff that I'm forgetting! But it was still valuable :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">LP2018</string>
-    <string name="title_activity_main">Map</string>
+    <string name="app_name">SafeWalk</string>
+    <string name="title_activity_main">SafeWalk</string>
     <string name="Plan_Trip">Plan Trip</string>
     <string name="call_SW">Call SafeWalk</string>
     <string name="Text_A_Friend">Text a Friend</string>
@@ -8,4 +8,5 @@
     <string name="permission_not_granted">SMS permission not granted</string>
     <string name="sms_hint">Phone Number</string>
     <string name="sms_message_hint">Enter your message here...</string>
+    <string name="route_info_string">Route Info</string>
 </resources>
